--- a/views/admin.htm
+++ b/views/admin.htm
@@ -1,25 +1,23 @@
 <!-- Boilerplate_XH: administration -->
 <div id="boilerplate_admin">
     <div class="plugineditcaption"><?php echo $labels['heading'];?></div>
-    <form action="<?php echo $newURL;?>" method="post">
-	<input type="text" name="boilerplate_name"/>
-	<input type="submit" class="submit" value="<?php echo
-	$labels['create'];?>"/>
-    </form>
     <table>
 <?php foreach ($boilerplates as $name => $boilerplate):?>
 	<tr>
 	    <td>
-		<a href="<?php echo $boilerplate['editURL'];?>" title="<?php
-		echo $labels['edit'];?>"><?php echo $name;?></a>
-	    </td>
-	    <td>
-		<form action="<?php echo $boilerplate['deleteURL'];?>"
-		method="post">
+		<form action="<?php echo $url;?>" method="post" onsubmit="return confirm('<?php echo $labels['confirm'];?>');">
 		    <input type="image" src="<?php echo $deleteImage;?>"
 		    alt="<?php echo $labels['delete'];?>" title="<?php echo
 		    $labels['delete'];?>"/>
+		    <input type="hidden" name="admin" value="plugin_main"/>
+		    <input type="hidden" name="action" value="delete"/>
+		    <input type="hidden" name="boilerplate_name" value="<?php
+		    echo $name;?>"/>
 		</form>
+	    </td>
+	    <td>
+		<a href="<?php echo $boilerplate['editURL'];?>" title="<?php
+		echo $labels['edit'];?>"><?php echo $name;?></a>
 	    </td>
 	    <td>
 		<input type="text" readonly="readonly"
@@ -29,4 +27,11 @@
 	</tr>
 <?php endforeach;?>
     </table>
+    <form action="<?php echo $url;?>" method="post">
+	<input type="text" name="boilerplate_name"/>
+	<input type="hidden" name="admin" value="plugin_main"/>
+	<input type="hidden" name="action" value="new"/>
+	<input type="submit" class="submit" value="<?php echo
+	$labels['create'];?>"/>
+    </form>
 </div>
