--- a/views/admin.htm
+++ b/views/admin.htm
@@ -1,6 +1,6 @@
 <!-- Boilerplate_XH: administration -->
+<h1><?php echo $labels['heading'];?></h1>
 <div id="boilerplate_admin">
-    <div class="plugineditcaption"><?php echo $labels['heading'];?></div>
     <table>
 <?php foreach ($boilerplates as $name => $boilerplate):?>
 	<tr>
