--- a/views/edit.htm
+++ b/views/edit.htm
@@ -1,5 +1,5 @@
 <!-- Boilerplate_XH: edit -->
-<div class="plugineditcaption"><?php echo $labels['heading'];?></div>
+<h1><?php echo $labels['heading'];?></h1>
     <form class="plugineditform" action="<?php echo $url;?>" method="post">
         <textarea class="plugintextarea" name="boilerplate_text" style="height: <?php echo $editorHeight;?>px"><?php echo $content;?></textarea>
 <?php if ($showSubmit):?>
