--- a/views/info.htm
+++ b/views/info.htm
@@ -1,5 +1,5 @@
 <!-- Boilerplate_XH: info -->
-<h1><a href="http://3-magi.net/?CMSimple_XH/Boilerplate_XH">Boilerplate_XH</a></h1>
+<h1>Boilerplate_XH &ndash; <?php echo $labels['info'];?></h1>
 <h4><?php echo $labels['syscheck'];?></h4>
 <ul style="list-style: none">
 <?php foreach ($checks as $check => $state):?>
@@ -13,7 +13,7 @@
 <hr/>
 <h4><?php echo $labels['about'];?></h4>
 <img src="<?php echo $icon;?>" style="float: left; width: 128px; height: 128px; margin-right: 16px"
-alt="Plugin Icon"/>
+alt="<?php echo $labels['logo'];?>"/>
 <p>Version: <?php echo $version;?></p>
 <p>Copyright &copy; 2012-2014 <a href="http://3-magi.net/">Christoph M. Becker</a></p>
 <p style="text-align: justify">This program is free software: you can
@@ -21,8 +21,8 @@ redistribute it and/or modify it under the terms of the GNU General Public
 License as published by the Free Software Foundation, either version 3 of the
 License, or (at your option) any later version.</p>
 <p style="text-align: justify">This program is distributed in the hope that it
-will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHAN&shy;TABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
+will be useful, but <em>without any warranty</em>; without even the implied warranty of
+<em>merchantability</em> or <em>fitness for a particular purpose</em>. See the GNU General
 Public License for more details.</p>
 <p style="text-align: justify">You should have received a copy of the GNU
 General Public License along with this program. If not, see
