--- a/views/admin.htm
+++ b/views/admin.htm
@@ -1,32 +1,32 @@
 <!-- Boilerplate_XH: administration -->
-<h1><?php echo $labels['heading'];?></h1>
+<h1><?=$labels['heading']?></h1>
 <div id="boilerplate_admin">
     <table>
 <?php foreach ($boilerplates as $name => $boilerplate):?>
 	<tr>
 	    <td>
-		<form action="<?php echo $url;?>" method="post" onsubmit="return confirm('<?php echo $labels['confirm'];?>');">
-		    <input type="image" src="<?php echo $deleteImage;?>" alt="<?php echo $labels['delete'];?>" title="<?php echo $labels['delete'];?>"/>
+		<form action="<?=$url?>" method="post" onsubmit="return confirm('<?=$labels['confirm']?>');">
+		    <input type="image" src="<?=$deleteImage?>" alt="<?=$labels['delete']?>" title="<?=$labels['delete']?>"/>
 		    <input type="hidden" name="admin" value="plugin_main"/>
 		    <input type="hidden" name="action" value="delete"/>
-		    <input type="hidden" name="boilerplate_name" value="<?php echo $name;?>"/>
-		    <?php echo Boilerplate_renderCsrfTokenInput();?>
+		    <input type="hidden" name="boilerplate_name" value="<?=$name?>"/>
+		    <?=Boilerplate_renderCsrfTokenInput()?>
 		</form>
 	    </td>
 	    <td>
-		<a href="<?php echo $boilerplate['editURL'];?>" title="<?php echo $labels['edit'];?>"><?php echo $name;?></a>
+		<a href="<?=$boilerplate['editURL']?>" title="<?=$labels['edit']?>"><?=$name?></a>
 	    </td>
 	    <td>
-		<input type="text" readonly="readonly" value="{{{boilerplate('<?php echo $name;?>')}}}" onclick="this.select();"/>
+		<input type="text" readonly="readonly" value="{{{boilerplate('<?=$name?>')}}}" onclick="this.select();"/>
 	    </td>
 	</tr>
 <?php endforeach;?>
     </table>
-    <form action="<?php echo $url;?>" method="post">
+    <form action="<?=$url?>" method="post">
 	<input type="text" name="boilerplate_name"/>
 	<input type="hidden" name="admin" value="plugin_main"/>
 	<input type="hidden" name="action" value="new"/>
-	<?php echo Boilerplate_renderCsrfTokenInput();?>
-	<input type="submit" class="submit" value="<?php echo $labels['create'];?>"/>
+	<?=Boilerplate_renderCsrfTokenInput()?>
+	<input type="submit" class="submit" value="<?=$labels['create']?>"/>
     </form>
 </div>
