--- a/views/edit.htm
+++ b/views/edit.htm
@@ -1,13 +1,13 @@
 <!-- Boilerplate_XH: edit -->
-<h1><?php echo $labels['heading'];?></h1>
-    <form class="plugineditform" action="<?php echo $url;?>" method="post">
-        <textarea class="plugintextarea" name="boilerplate_text" style="height: <?php echo $editorHeight;?>px"><?php echo $content;?></textarea>
+<h1><?=$labels['heading']?></h1>
+    <form class="plugineditform" action="<?=$url?>" method="post">
+        <textarea class="plugintextarea" name="boilerplate_text" style="height: <?=$editorHeight?>px"><?=$content?></textarea>
 <?php if ($showSubmit):?>
-        <input type="submit" class="submit" value="<?php echo $labels['save'];?>"/>
+        <input type="submit" class="submit" value="<?=$labels['save']?>"/>
 <?php endif;?>
         <input type="hidden" name="admin" value="plugin_main"/>
         <input type="hidden" name="action" value="save"/>
-        <input type="hidden" name="boilerplate_name" value="<?php echo $name;?>"/>
-        <?php echo Boilerplate_renderCsrfTokenInput();?>
+        <input type="hidden" name="boilerplate_name" value="<?=$name?>"/>
+        <?=Boilerplate_renderCsrfTokenInput()?>
     </form>
 </div>
