--- a/views/info.htm
+++ b/views/info.htm
@@ -1,20 +1,20 @@
 <!-- Boilerplate_XH: info -->
-<h1>Boilerplate_XH &ndash; <?php echo $labels['info'];?></h1>
-<h4><?php echo $labels['syscheck'];?></h4>
+<h1>Boilerplate_XH &ndash; <?=$labels['info']?></h1>
+<h4><?=$labels['syscheck']?></h4>
 <ul style="list-style: none">
 <?php foreach ($checks as $check => $state):?>
     <li>
-        <img src="<?php echo $images[$state];?>" alt="<?php echo $images[$state];?>"
+        <img src="<?=$images[$state]?>" alt="<?=$images[$state]?>"
             style="margin: 0; height: 1em; padding-right: 1em"/>
-        <span><?php echo $check;?></span>
+        <span><?=$check?></span>
     </li>
 <?php endforeach;?>
 </ul>
 <hr/>
-<h4><?php echo $labels['about'];?></h4>
-<img src="<?php echo $icon;?>" style="float: left; width: 128px; height: 128px; margin-right: 16px"
-alt="<?php echo $labels['logo'];?>"/>
-<p>Version: <?php echo $version;?></p>
+<h4><?=$labels['about']?></h4>
+<img src="<?=$icon?>" style="float: left; width: 128px; height: 128px; margin-right: 16px"
+alt="<?=$labels['logo']?>"/>
+<p>Version: <?=$version?></p>
 <p>Copyright &copy; 2012-2015 <a href="http://3-magi.net/">Christoph M. Becker</a></p>
 <p style="text-align: justify">This program is free software: you can
 redistribute it and/or modify it under the terms of the GNU General Public
