--- a/views/admin.htm
+++ b/views/admin.htm
@@ -10,7 +10,7 @@
 		    <input type="hidden" name="admin" value="plugin_main"/>
 		    <input type="hidden" name="action" value="delete"/>
 		    <input type="hidden" name="boilerplate_name" value="<?=$name?>"/>
-		    <?=Boilerplate_renderCsrfTokenInput()?>
+		    <?=$_XH_csrfProtection->tokenInput()?>
 		</form>
 	    </td>
 	    <td>
@@ -26,7 +26,7 @@
 	<input type="text" name="boilerplate_name"/>
 	<input type="hidden" name="admin" value="plugin_main"/>
 	<input type="hidden" name="action" value="new"/>
-	<?=Boilerplate_renderCsrfTokenInput()?>
+	<?=$_XH_csrfProtection->tokenInput()?>
 	<input type="submit" class="submit" value="<?=$labels['create']?>"/>
     </form>
 </div>
