--- a/views/edit.htm
+++ b/views/edit.htm
@@ -8,6 +8,6 @@
         <input type="hidden" name="admin" value="plugin_main"/>
         <input type="hidden" name="action" value="save"/>
         <input type="hidden" name="boilerplate_name" value="<?=$name?>"/>
-        <?=Boilerplate_renderCsrfTokenInput()?>
+        <?=$_XH_csrfProtection->tokenInput()?>
     </form>
 </div>
