Extract View class

--- a/views/info.htm
+++ b/views/info.htm
@@ -1,6 +1,6 @@
 <!-- Boilerplate_XH: info -->
-<h1>Boilerplate_XH &ndash; <?=$labels['info']?></h1>
-<h4><?=$labels['syscheck']?></h4>
+<h1>Boilerplate_XH &ndash; <?=$this->text('label_info')?></h1>
+<h4><?=$this->text('syscheck_title')?></h4>
 <ul style="list-style: none">
 <?php foreach ($checks as $check => $state):?>
     <li>
@@ -11,9 +11,9 @@
 <?php endforeach;?>
 </ul>
 <hr/>
-<h4><?=$labels['about']?></h4>
+<h4><?=$this->text('about')?></h4>
 <img src="<?=$icon?>" style="float: left; width: 128px; height: 128px; margin-right: 16px"
-alt="<?=$labels['logo']?>"/>
+alt="<?=$this->text('alt_logo')?>"/>
 <p>Version: <?=$version?></p>
 <p>Copyright &copy; 2012-2021 <a href="http://3-magi.net/">Christoph M. Becker</a></p>
 <p style="text-align: justify">This program is free software: you can
