--- a/views/admin.htm
+++ b/views/admin.htm
@@ -1,20 +1,20 @@
 <!-- Boilerplate_XH: administration -->
-<h1><?=$labels['heading']?></h1>
+<h1>Boilerplate – <?=$this->text('menu_main')?></h1>
 <div id="boilerplate_admin">
     <table>
 <?php foreach ($boilerplates as $name => $boilerplate):?>
 	<tr>
 	    <td>
-		<form action="<?=$url?>" method="post" onsubmit="return confirm('<?=$labels['confirm']?>');">
-		    <input type="image" src="<?=$deleteImage?>" alt="<?=$labels['delete']?>" title="<?=$labels['delete']?>"/>
+		<form action="<?=$url?>" method="post" onsubmit="return confirm('<?=$confirmation?>');">
+		    <input type="image" src="<?=$deleteImage?>" alt="<?=$this->text('label_delete')?>" title="<?=$this->text('label_delete')?>"/>
 		    <input type="hidden" name="admin" value="plugin_main"/>
 		    <input type="hidden" name="action" value="delete"/>
 		    <input type="hidden" name="boilerplate_name" value="<?=$name?>"/>
-		    <?=$_XH_csrfProtection->tokenInput()?>
+		    <?=$this->csrfToken()?>
 		</form>
 	    </td>
 	    <td>
-		<a href="<?=$boilerplate['editURL']?>" title="<?=$labels['edit']?>"><?=$name?></a>
+		<a href="<?=$boilerplate['editURL']?>" title="<?=$this->text('label_edit')?>"><?=$name?></a>
 	    </td>
 	    <td>
 		<input type="text" readonly="readonly" value="{{{boilerplate('<?=$name?>')}}}" onclick="this.select();"/>
@@ -26,7 +26,7 @@
 	<input type="text" name="boilerplate_name"/>
 	<input type="hidden" name="admin" value="plugin_main"/>
 	<input type="hidden" name="action" value="new"/>
-	<?=$_XH_csrfProtection->tokenInput()?>
-	<input type="submit" class="submit" value="<?=$labels['create']?>"/>
+	<?=$this->csrfToken()?>
+	<input type="submit" class="submit" value="<?=$this->text('label_create')?>"/>
     </form>
 </div>
