--- a/views/edit.htm
+++ b/views/edit.htm
@@ -1,10 +1,10 @@
 <!-- Boilerplate_XH: edit -->
-<h1><?=$labels['heading']?></h1>
+<h1>Boilerplate – <?=$name?></h1>
     <form class="plugineditform" action="<?=$url?>" method="post">
         <textarea class="plugintextarea" name="boilerplate_text" style="height: <?=$editorHeight?>px"><?=$content?></textarea>
         <input type="hidden" name="admin" value="plugin_main"/>
         <input type="hidden" name="action" value="save"/>
         <input type="hidden" name="boilerplate_name" value="<?=$name?>"/>
-        <?=$_XH_csrfProtection->tokenInput()?>
+        <?=$this->csrfToken()?>
     </form>
 </div>
